--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -515,9 +515,10 @@ Previously run parameters:
 <TMPL_IF NAME=ORG_MENU>
 <td>
 <div class="ui-widget-content resizable" style="float: left; padding: 0.3em">
-<DIV class = "oblique">Organism <TMPL_VAR NAME="NUM">: </DIV>
-   <DIV>Search <span class=small>Name: <input type="text" size=10 value="<TMPL_VAR NAME="ORG_NAME">" name = "org_name<TMPL_VAR NAME="NUM">" id="org_name<TMPL_VAR NAME="NUM">" style="font-style:italic" onFocus="search_bar('org_name<TMPL_VAR NAME="NUM">')" onKeyUp='timing("org_name<TMPL_VAR NAME="NUM">");'><span>
-   Description: <input type="text" size=10 value="<TMPL_VAR NAME="ORG_DESC">" name = "org_desc<TMPL_VAR NAME="NUM">" id="org_desc<TMPL_VAR NAME="NUM">" style="font-style:italic" onFocus="search_bar('org_desc<TMPL_VAR NAME="NUM">')" onKeyUp='timing("org_desc<TMPL_VAR NAME="NUM">");'></DIV>
+<DIV class = "oblique">Organism <TMPL_VAR NAME="NUM"> Search: </DIV>
+   <DIV><span class=small>Name: <input type="text" size=10 value="<TMPL_VAR NAME="ORG_NAME">" name = "org_name<TMPL_VAR NAME="NUM">" id="org_name<TMPL_VAR NAME="NUM">" style="font-style:italic" onFocus="search_bar('org_name<TMPL_VAR NAME="NUM">')" onKeyUp='timing("org_name<TMPL_VAR NAME="NUM">");'><span><span class='ui-button ui-state-default ui-corner-all' onClick="timing('org_name<TMPL_VAR NAME="NUM">');"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+   Description: <input type="text" size=10 value="<TMPL_VAR NAME="ORG_DESC">" name = "org_desc<TMPL_VAR NAME="NUM">" id="org_desc<TMPL_VAR NAME="NUM">" style="font-style:italic" onFocus="search_bar('org_desc<TMPL_VAR NAME="NUM">')" onKeyUp='timing("org_desc<TMPL_VAR NAME="NUM">");'><span class='ui-button ui-state-default ui-corner-all' onClick="timing('org_desc<TMPL_VAR NAME="NUM">');"><span class="ui-icon ui-icon-arrowrefresh-1-w"></span></span>
+</DIV>
    <DIV id="org_list<TMPL_VAR NAME="NUM">"><TMPL_VAR NAME="ORG_LIST"></DIV>
    <Table><Tr>
      <td>Genome:
