increased height of map and added additional zoom level

--- a/web/tmpl/GenomeView.tmpl
+++ b/web/tmpl/GenomeView.tmpl
@@ -2,7 +2,7 @@
     <style type="text/css">
         #map {
             width: ;
-            height: 300;
+            height: 330;
             border: 1px solid black;
         }
         #zoomLevel {
@@ -129,7 +129,7 @@
                  units     :'bp',
                  tileSize: new OpenLayers.Size(768, size),
 //                 resolutions:[4096, 1024,256,64,16,4,1,0.25, 0.125, 0.0625, 0.03125, 0.015625],
-                 resolutions:[2048, 1024,512,256,128,64,32,16,8,4,2,1, 0.5, 0.25, 0.125, 0.0625, 0.032125, 0.015625],
+                 resolutions:[4096, 2048, 1024,512,256,128,64,32,16,8,4,2,1, 0.5, 0.25, 0.125, 0.0625, 0.032125, 0.015625],
                   controls: [new OpenLayers.Control.MouseDefaults()]
             });
             layers = [
