chagned page text

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -485,7 +485,7 @@ function open_window (url, loc, width, height)
  <tr>
    <td>Minimum chromosome size:   <input type=text name=min_chr_size id=min_chr_size size=6 value="<TMPL_VAR NAME="MIN_CHR_SIZE">">
  <TR>
-   <TD>Calculate substitution rates for syntenic protein coding gene pairs (slow)?
+   <TD>Calculate substitution rates for syntenic protein coding gene pairs and color syntenic dots accordingly (slow)?
    <select name="ks_type" id = "ks_type">
      <option value = 0 <TMPL_VAR NAME=KS0> >--None--</option>
      <option value = ks <TMPL_VAR NAME=KS1> >Synonymous (kS)</option>
