updated links to wiki

--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -248,8 +248,8 @@ $(document).ready( function() {
 	 <ul>
 	      <li><a href="/wiki" target="_blank">CoGePedia</a></li>
 	      <li><a href="<TMPL_VAR NAME=HELP>" target="_blank">Page Docs</a></li>
-	      <li><a href="/CoGe/docs/help/CoGe/Overview.html" target="_blank">About CoGe</a></li>
-	      <li><a href="/CoGe/docs/help/Tutorials/Tutorials.html" target="_blank">Tutorials</a></li>
+	      <li><a href="/wiki/index.php/FAQs" target="_blank">About CoGe</a></li>
+	      <li><a href="/wiki/index.php/Tutorials" target="_blank">Tutorials</a></li>
 	      <li><a href="/wiki/index.php/Contact_Page" target="_blank">Contact or Cite Us</a></li>
 	      <li><a href="/wiki/index.php/System_Support" target="_blank">System Support</a></li>
 	</ul>
