--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -15,10 +15,10 @@ $(document).ready(function(){
   if(seqview !=0){
     var featid = "<TMPL_VAR NAME=FEATID>";
     if ((featid) && (featid!=0)){
-      seqObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=UPSTREAM>,<TMPL_VAR NAME=DOWNSTREAM>,seqview,'<TMPL_VAR NAME=CHR>',<TMPL_VAR NAME=RC>,featid);
+      seqObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=DSGID>,<TMPL_VAR NAME=UPSTREAM>,<TMPL_VAR NAME=DOWNSTREAM>,seqview,'<TMPL_VAR NAME=CHR>',<TMPL_VAR NAME=RC>,featid);
     }
     else{
-      seqObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=UPSTREAM>,<TMPL_VAR NAME=DOWNSTREAM>,seqview,'<TMPL_VAR NAME=CHR>',<TMPL_VAR NAME=RC>);
+      seqObj = new generate_seq_obj(<TMPL_VAR NAME=DSID>,<TMPL_VAR NAME=DSGID>,<TMPL_VAR NAME=UPSTREAM>,<TMPL_VAR NAME=DOWNSTREAM>,seqview,'<TMPL_VAR NAME=CHR>',<TMPL_VAR NAME=RC>);
     }
   }
   //TODO - handle js object error when checking for value when it hasn't been instantiated
@@ -70,9 +70,10 @@ $(function() {
 					$('#genome_info_popup').dialog('open');
 			});
 });
-function generate_seq_obj(dsid,upstream,downstream,seqview,chr,rc,featid){
+function generate_seq_obj(dsid,dsgid, upstream,downstream,seqview,chr,rc,featid){
   this.featid=featid;
   this.dsid=dsid;
+  this.dsgid=dsgid;
   this.upstream=upstream;
   this.downstream=downstream;
   this.seqview=seqview;
@@ -621,6 +622,7 @@ function get_radio(which_type,val){
 
 function get_seq(which_type) {
  dsid = seqObj.dsid;
+ dsgid = seqObj.dsgid;
  featid = seqObj.featid;
  chr = seqObj.chr;
  if (featid) {
@@ -637,6 +639,7 @@ function get_seq(which_type) {
    get_sequence([
 	'args__chr','args__'+chr,
    	'args__dsid','args__'+dsid,
+   	'args__dsgid','args__'+dsgid,
 	'args__blast_type', which_type, 
 	'args__start', 'args__'+seqObj.upstream,
 	'args__stop', 'args__'+seqObj.downstream,
