in function get_seq, added 'loading. . .' message to be sent to seq_box while sequence being retrieved

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -621,6 +621,7 @@ function get_radio(which_type,val){
 }
 
 function get_seq(which_type) {
+ $('#seq_box').val('loading. . .');
  dsid = seqObj.dsid;
  dsgid = seqObj.dsgid;
  featid = seqObj.featid;
