added loading message while sequence is loading

--- a/web/tmpl/SeqView.tmpl
+++ b/web/tmpl/SeqView.tmpl
@@ -166,7 +166,7 @@ function waiting(tag,rc) {
 */
 function redefine(rc){
   $('#gc_info').html('');
-
+  $('#seq_text').val('loading. . .');
   var up;
   var down;
   myObj.rc=rc;
