added a scrollTop directive when Generate Synmap button is pressed

--- a/web/tmpl/SynMap.tmpl
+++ b/web/tmpl/SynMap.tmpl
@@ -421,7 +421,7 @@ function open_window (url, loc, width, height)
 </table>
 
 
-<span style="font-size: 1em" class="ui-button ui-state-default ui-corner-all" id="synmap_go" onClick="reset_basename();generate_basefile([],[update_basename]);run_synmap();" >Generate SynMap</span>
+<span style="font-size: 1em" class="ui-button ui-state-default ui-corner-all" id="synmap_go" onClick="jQuery('html, body').animate({scrollTop: 0}, 2000); reset_basename();generate_basefile([],[update_basename]);run_synmap();" >Generate SynMap</span>
 
 <span style="font-size: 1em" class='ui-button ui-state-default ui-corner-all' onClick="$('#results').html('');" >Clear Results</span>
 
