--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -80,6 +80,7 @@ function feature_checkboxes(){
     get_fasta_seqs(['args__'+accn],[export_url]);
   }
   else if (action == "xls"){
+    $('#retrieve_message').html('Retrieving data');
     generate_excel_file(['args__'+accn],[export_url]);
   }
   else if (action == "blast"){
@@ -112,6 +113,8 @@ function export_url(url,num_accns) {
      }
     window.open(url);
   }
+  $('#retrieve_message').html(' ');
+  
 }
 
 function show_all_codon_tables(num) {
@@ -351,7 +354,7 @@ Filter Table Rows:
     <option value = "xls">Excel</option>
     <option value = "featlist">FeatList</option>
    </select>
-<span class='ui-button ui-state-default ui-corner-all ui-button-icon-right' onclick="feature_checkboxes();"><span class="ui-icon ui-icon-extlink"></span>Go</span>  
+<span class='ui-button ui-state-default ui-corner-all ui-button-icon-right' onclick="feature_checkboxes();"><span class="ui-icon ui-icon-extlink"></span>Go</span><span id=retrieve_message class=alert></span>  
   </div>
 
 <div id="save_form" title="Save Results">
