--- a/web/tmpl/FastaView.tmpl
+++ b/web/tmpl/FastaView.tmpl
@@ -2,6 +2,7 @@
 
 function update_seqs(prot, text)
  {
+  $('#seq_text').val("loading . . .");
   var name_only = 0;
   if ($('#name_only')[0].checked) {name_only = 1};
   pageObj.prot=prot;
@@ -56,18 +57,15 @@ function post_to_target () {
 
 function post_to_prosite () {
  var seq = $('#seq_text').val();
- var seqs=seq.split("\n");
- seqs.shift();
- seq = seqs.join("\n");
+ seq = seq.replace(/\*/g,"");
  var url = "http://ca.expasy.org/cgi-bin/prosite/PSScan.cgi";
- var myForm = document.createElement("form");
+ var myForm = document.createElement("FORM");
  myForm.method="post" ;
  myForm.action=url;
  myForm.setAttribute("target", "_blank");
- var myInput = document.createElement("input");
+ var myInput = document.createElement("textarea");
  myInput.name="seq";
  myInput.value=seq;
- 
  myForm.appendChild(myInput);
  document.body.appendChild(myForm);
  myForm.submit();
